@@ -17,15 +17,15 @@
 package org.apache.solr.client.solrj.embedded;
 
 import java.io.File;
+import java.io.InputStream;
 import java.net.URL;
 import java.util.Locale;
 import java.util.Random;
-import org.apache.commons.io.IOUtils;
 import org.apache.http.Header;
 import org.apache.http.HttpResponse;
-import org.apache.http.client.HttpClient;
 import org.apache.http.client.methods.HttpGet;
 import org.apache.http.client.methods.HttpRequestBase;
+import org.apache.http.impl.client.CloseableHttpClient;
 import org.apache.http.impl.client.HttpClients;
 import org.apache.solr.SolrJettyTestBase;
 import org.apache.solr.SolrTestCaseJ4;
@@ -93,15 +93,17 @@ public class JettyWebappTest extends SolrTestCaseJ4 {
     // sure they compile ok
 
     String adminPath = "http://127.0.0.1:" + port + context + "/";
-    byte[] bytes = IOUtils.toByteArray(new URL(adminPath).openStream());
-    assertNotNull(bytes); // real error will be an exception
+    try (InputStream is = new URL(adminPath).openStream()) {
+      assertNotNull(is.readAllBytes()); // real error will be an exception
+    }
 
-    HttpClient client = HttpClients.createDefault();
-    HttpRequestBase m = new HttpGet(adminPath);
-    HttpResponse response = client.execute(m, HttpClientUtil.createNewHttpClientRequestContext());
-    assertEquals(200, response.getStatusLine().getStatusCode());
-    Header header = response.getFirstHeader("X-Frame-Options");
-    assertEquals("DENY", header.getValue().toUpperCase(Locale.ROOT));
-    m.releaseConnection();
+    try (CloseableHttpClient client = HttpClients.createDefault()) {
+      HttpRequestBase m = new HttpGet(adminPath);
+      HttpResponse response = client.execute(m, HttpClientUtil.createNewHttpClientRequestContext());
+      assertEquals(200, response.getStatusLine().getStatusCode());
+      Header header = response.getFirstHeader("X-Frame-Options");
+      assertEquals("DENY", header.getValue().toUpperCase(Locale.ROOT));
+      m.releaseConnection();
+    }
   }
 }
